[package]
name = "nbascore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3.15"
tokio = { version = "1.7.1", features = [ "net", "rt", "macros", "rt-multi-thread" ] }
deepsize = "0.2.0"
chrono = "0.4.19"
