[package]
name = "nbascore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.19"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
